@@ -2,6 +2,7 @@
  *
  * Copyright (c) 2000-2003 Intel Corporation 
  * All rights reserved. 
+ * Copyright (c) 2012 France Telecom All rights reserved. 
  *
  * Redistribution and use in source and binary forms, with or without 
  * modification, are permitted provided that the following conditions are met: 
@@ -44,7 +45,7 @@
 
 
 #ifdef INCLUDE_CLIENT_APIS
-
+#if EXCLUDE_GENA == 0
 
 #include <stdlib.h> /* for calloc(), free() */
 
@@ -324,6 +325,6 @@ ClientSubscription *GetClientSubActualSID(ClientSubscription *head, token *sid)
 	return next;
 }
 
-
- #endif /* INCLUDE_CLIENT_APIS */
+#endif /* EXCLUDE_GENA */
+#endif /* INCLUDE_CLIENT_APIS */
 
